# s3p-sdk

./: .env.example  .gitignore  README.md  pyproject.toml  pytest.ini  tox.ini
.github/workflows/: PYPI-publishing.yml  build-docs.yml  project-test.yml  python-package.yml
docs/: config.md  sdk.md
docs/Writerside/: c.list  redirection-rules.xml  spps.tree  v.list  writerside.cfg
docs/Writerside/cfg/: buildprofiles.xml  glossary.xml
docs/Writerside/topics/: About-This-Guide.md  Create-a-Plugin-Python-Project.md  Developing-a-Plugin.md  Getting-Help.md  Home-Page.topic  Plugin-Configuration-file.md  Plugin-Content.md  Plugin-Dependencies.md  Plugin-Development-FAQ.md  Plugin-GitHub-Template.md  Plugin-Structure.topic  Plugin-Types.md  Quick-Start-Guide.md  Requirements.md  Rules.md  The-S3-Platform.md
src/s3p_sdk/: __init__.py
src/s3p_sdk/exceptions/: parser.py
src/s3p_sdk/module/: __init__.py
src/s3p_sdk/plugin/: __init__.py  types.py
src/s3p_sdk/plugin/config/: __init__.py  abc_object.py  coreconfig.py  middlewareconfig.py  restrictconfig.py  taskconfig.py  trigger.py  type.py
src/s3p_sdk/plugin/payloads/: __init__.py  abc_payload_base.py  payload_base.py
src/s3p_sdk/repository/: __init__.py
src/s3p_sdk/repository/db/: main.py  user.py
src/s3p_sdk/task/: __init__.py  status.py
src/s3p_sdk/types/: __init__.py  digest.py  document.py  export.py  manifest.py  node.py  plugin.py  plugin_restrictions.py  refer.py  role.py  score.py  task.py  user.py
tests/plugin/config/modules/: test_abc_module.py  test_timezone_safe_control.py
tests/plugin/config/simple/: test_simple_all_config.py  test_simple_core_config.py  test_simple_task_config.py
tests/plugin/payloads/: test_make_parser.py  test_new_nist_parser.py
tests/test_data/: test_refer.py
tests/test_plugin/test_config/test_modules/: test_abc_module.py  test_cut_junk_characters_from_doc_text.py  test_timezone_safe_control.py
tests/test_plugin/test_config/test_simple/: test_simple_all_config.py  test_simple_core_config.py  test_simple_payload_config.py  (+2 more)
tests/test_plugin/test_payloads/: test_make_parser.py  test_new_nist_parser.py
tests/types/: test_document.py
(+21 files in other folders)
