[tool.poetry]
name = "s3p-sdk"
version = "0.2.4"
description = "A small SDK for simple creating microservises or plugins for the S3 Platform"
authors = [
    "Roman Lupashko <romal5754@gmail.com>",
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]
license = "GPL-3.0-or-later"
repository = "https://github.com/CuberHuber/S3P-SDK"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
mkdocs = "*"
tox = "4.14.1"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
mkdocs = "*"
pytest = "8.1.1"
selenium = "4.15.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
